--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
 		"@s-hirano-ist/s-database": "workspace:*",
 		"@s-hirano-ist/s-search": "workspace:*",
 		"@s-hirano-ist/s-notification": "workspace:*",
+		"@s-hirano-ist/s-storage": "workspace:*",
 		"@s-hirano-ist/s-ui": "workspace:*",
 		"@sentry/nextjs": "10.38.0",
 		"@t3-oss/env-nextjs": "0.13.10",
@@ -23,7 +24,6 @@
 		"@vercel/analytics": "1.6.1",
 		"@vercel/speed-insights": "1.3.1",
 		"lucide-react": "0.563.0",
-		"minio": "8.0.6",
 		"next": "16.1.6",
 		"next-auth": "5.0.0-beta.30",
 		"next-intl": "4.8.0",
