--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -5,5 +5,6 @@
 	"packages/database": "1.14.0",
 	"packages/notification": "1.14.0",
 	"packages/scripts": "1.14.0",
-	"packages/search": "1.14.0"
+	"packages/search": "1.14.0",
+	"packages/storage": "1.14.0"
 }
