--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -24,6 +24,8 @@ jobs:
       scripts_release_created: ${{ steps.release.outputs['packages/scripts--release_created'] }}
       search_release_created: ${{ steps.release.outputs['packages/search--release_created'] }}
       storage_release_created: ${{ steps.release.outputs['packages/storage--release_created'] }}
+      embedding_api_release_created: ${{ steps.release.outputs['services/embedding-api--release_created'] }}
+      embedding_api_version: ${{ steps.release.outputs['services/embedding-api--version'] }}
     steps:
       - uses: googleapis/release-please-action@16a9c90856f42705d54a6fda1823352bdc62cf38 # v4
         id: release
@@ -106,3 +108,43 @@ jobs:
         run: pnpm publish --no-git-checks --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  publish-embedding-api:
+    needs: release-please
+    if: ${{ needs.release-please.outputs.embedding_api_release_created == 'true' }}
+    runs-on: ubuntu-24.04
+    timeout-minutes: 15
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
+        with:
+          persist-credentials: false
+          submodules: true
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@c94ce9fb468520275223c153574b00df6fe4bcc9 # v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@c299e40c65443455700f0fdfc63efafe5b349051 # v5
+        with:
+          images: ${{ secrets.DOCKER_HUB_USERNAME }}/embedding-api
+          tags: |
+            type=raw,value=latest
+            type=raw,value=${{ needs.release-please.outputs.embedding_api_version }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@8d2750c68a42422c14e847fe6c8ac0403b4cbd6f # v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6
+        with:
+          context: .
+          file: ./services/embedding-api/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
