--- a/services/embedding-api/Dockerfile
+++ b/services/embedding-api/Dockerfile
@@ -35,5 +35,5 @@ ENV NODE_ENV=production
 COPY --from=builder /app/deployed/node_modules ./node_modules
 COPY --from=builder /app/deployed/dist ./dist
 EXPOSE 3001
-HEALTHCHECK --interval=30s CMD node -e "fetch('http://localhost:3001/health').then(r=>{if(!r.ok)process.exit(1)}).catch(()=>process.exit(1))"
+HEALTHCHECK --interval=30s --start-period=120s CMD node -e "fetch('http://localhost:3001/health').then(r=>{if(!r.ok)process.exit(1)}).catch(()=>process.exit(1))"
 CMD ["node", "dist/index.js"]
