--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -9,6 +9,7 @@
 		"fetch-images": "./dist/fetch-images.js",
 		"fetch-notes": "./dist/fetch-notes.js",
 		"find-duplicate-json-articles": "./dist/find-duplicate-json-articles.js",
+		"rag-delete-collection": "./dist/rag/delete-collection.js",
 		"rag-ingest": "./dist/rag/ingest.js",
 		"rag-search": "./dist/rag/search.js",
 		"reset-articles": "./dist/reset-articles.js",
@@ -37,6 +38,7 @@
 		"fetch-images": "tsx src/fetch-images.ts",
 		"fetch-notes": "tsx src/fetch-notes.ts",
 		"find-duplicate-json-articles": "tsx src/find-duplicate-json-articles.ts",
+		"rag-delete-collection": "tsx src/rag/delete-collection.ts",
 		"rag-ingest": "tsx src/rag/ingest.ts",
 		"rag-search": "tsx src/rag/search.ts",
 		"reset-articles": "tsx src/reset-articles.ts",
