--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -97,8 +97,8 @@
 		"react-syntax-highlighter": "16.1.0",
 		"remark-gfm": "4.0.1",
 		"sonner": "2.0.7",
-		"tailwind-merge": "3.4.0",
-		"vaul": "1.1.2"
+		"@base-ui/react": "1.2.0",
+		"tailwind-merge": "3.4.0"
 	},
 	"devDependencies": {
 		"@storybook/nextjs-vite": "10.2.8",
