fix: esm import

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -68,7 +68,7 @@
 		"LICENSE"
 	],
 	"scripts": {
-		"build": "tsc && tsc-esm-fix --target dist",
+		"build": "tsc",
 		"prepublishOnly": "pnpm run build",
 		"clean": "rm -rf dist",
 		"typecheck": "tsc --noEmit"
@@ -92,7 +92,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "24.10.13",
-		"tsc-esm-fix": "3.1.2",
 		"typescript": "5.9.3"
 	}
 }
