--- a/packages/scripts/tsconfig.json
+++ b/packages/scripts/tsconfig.json
@@ -15,8 +15,7 @@
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"verbatimModuleSyntax": true,
-		"rewriteRelativeImportExtensions": true
+		"verbatimModuleSyntax": true
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "dist"]
