--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -29,7 +29,7 @@
 		"cleanup-minio-images": "./dist/cleanup-minio-images.js"
 	},
 	"scripts": {
-		"build": "tsc && tsc-esm-fix --target dist",
+		"build": "tsc",
 		"clean": "rm -rf dist",
 		"typecheck": "tsc --noEmit",
 		"prepublishOnly": "pnpm run build",
@@ -88,7 +88,6 @@
 		"@types/jsdom": "27.0.0",
 		"@types/node": "24.10.13",
 		"@types/turndown": "5.0.6",
-		"tsc-esm-fix": "3.1.2",
 		"tsx": "4.21.0",
 		"typescript": "5.9.3"
 	}
