--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -120,7 +120,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6
         with:
-          token: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+          persist-credentials: false
           submodules: true
 
       - name: Log in to Docker Hub
@@ -161,6 +161,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git remote set-url origin "https://x-access-token:${{ secrets.ACTIONS_GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
           git add compose.yaml
           git diff --cached --quiet && echo "No changes to commit" && exit 0
           git commit -m "chore: update embedding-api image to v${{ needs.release-please.outputs.embedding_api_version }}"
