feat: change embedding model from js to hg

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -6,6 +6,5 @@
 	"packages/notification": "1.16.3",
 	"packages/scripts": "1.16.3",
 	"packages/search": "1.16.3",
-	"packages/storage": "1.16.3",
-	"services/embedding-api": "1.14.3"
+	"packages/storage": "1.16.3"
 }
