--- a/compose.yaml
+++ b/compose.yaml
@@ -1,23 +1,21 @@
 services:
   embedding-api:
-    image: s0hirano/embedding-api:1.14.2@sha256:8c9bd1c2bf35be73e25e47b2b55e8297dddf93cc2b5f698b8756b072288f2655
+    image: ghcr.io/huggingface/text-embeddings-inference:cpu-1.9
     container_name: embedding-api
+    platform: linux/amd64
     restart: unless-stopped
-    environment:
-      - API_KEY=${EMBEDDING_API_KEY}
-      - PORT=3001
+    ports:
+      - "127.0.0.1:3001:3001"
+    command: >-
+      --model-id ${EMBEDDING_MODEL:-intfloat/multilingual-e5-large}
+      --port 3001
+      --pooling mean
     volumes:
-      - hf-cache:/root/.cache/huggingface/transformers
+      - hf-cache:/data
     networks:
       - tunnel-net
     healthcheck:
-      test:
-        [
-          "CMD",
-          "node",
-          "-e",
-          "fetch('http://localhost:3001/health').then(r=>{if(!r.ok)process.exit(1)}).catch(()=>process.exit(1))",
-        ]
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
       interval: 30s
       timeout: 3s
       retries: 3
@@ -26,6 +24,7 @@ services:
   minio:
     image: minio/minio:RELEASE.2025-04-22T22-12-26Z@sha256:a1ea29fa28355559ef137d71fc570e508a214ec84ff8083e39bc5428980b015e
     container_name: minio
+    profiles: [vps]
     restart: unless-stopped
     command: server /data --console-address ":9001"
     environment:
@@ -47,6 +46,7 @@ services:
   minio-init:
     image: minio/mc:RELEASE.2025-05-21T01-59-54Z@sha256:09f93f534cde415d192bb6084dd0e0ddd1715fb602f8a922ad121fd2bf0f8b44
     container_name: minio-init
+    profiles: [vps]
     depends_on:
       minio:
         condition: service_healthy
@@ -66,6 +66,7 @@ services:
   cloudflared:
     image: cloudflare/cloudflared:latest@sha256:404528c1cd63c3eb882c257ae524919e4376115e6fe57befca8d603656a91a4c
     container_name: cloudflared
+    profiles: [vps]
     restart: unless-stopped
     command: tunnel run
     environment:
