chore: update knowledge

--- a/.env.sample
+++ b/.env.sample
@@ -6,16 +6,16 @@
 # Next.js アプリ用の環境変数は app/.env.sample を参照してください。
 
 # --- Embedding API (HuggingFace TEI) ---
-# TEI で使用するモデル ID（デフォルト: intfloat/multilingual-e5-large）
+# TEI で使用するモデル ID（必須）
 EMBEDDING_MODEL=intfloat/multilingual-e5-large
-# ベクトルの次元数（デフォルト: 1024、モデルに合わせて変更）
+# ベクトルの次元数（必須、モデルに合わせて変更）
 EMBEDDING_VECTOR_SIZE=1024
-# Embedding 時のプレフィックス（デフォルト: "query: " / "passage: "）
+# Embedding 時のプレフィックス（必須）
 EMBEDDING_QUERY_PREFIX=query:
 EMBEDDING_PASSAGE_PREFIX=passage:
 
 # --- Qdrant ---
-# Qdrant のコレクション名（デフォルト: knowledge_v2）
+# Qdrant のコレクション名（必須）
 QDRANT_COLLECTION_NAME=knowledge_v2
 
 # --- MinIO (vps profile) ---
