docs: add env.sample for embedding models

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,15 @@
 
 # --- Embedding API (HuggingFace TEI) ---
 # TEI で使用するモデル ID（必須）
+# 多言語対応モデル (日英対応):
+#   intfloat/multilingual-e5-small          (384次元, 高速・軽量)
+#   intfloat/multilingual-e5-base           (768次元, バランス型)
+#   intfloat/multilingual-e5-large          (1024次元, 高精度)
+#   intfloat/multilingual-e5-large-instruct (1024次元, instruction-tuned)
+#   BAAI/bge-m3                             (1024次元, prefix不要)
+# 英語専用モデル:
+#   BAAI/bge-base-en-v1.5                   (768次元, prefix不要)
+#   BAAI/bge-large-en-v1.5                  (1024次元, prefix不要)
 EMBEDDING_MODEL=intfloat/multilingual-e5-large
 # ベクトルの次元数（必須、モデルに合わせて変更）
 EMBEDDING_VECTOR_SIZE=1024
