--- a/app/.env.sample
+++ b/app/.env.sample
@@ -31,6 +31,11 @@ CF_ACCESS_CLIENT_ID=
 CF_ACCESS_CLIENT_SECRET=
 QDRANT_URL=
 QDRANT_API_KEY=
+QDRANT_COLLECTION_NAME=knowledge_v2
+EMBEDDING_VECTOR_SIZE=1024
+EMBEDDING_MODEL=intfloat/multilingual-e5-large
+EMBEDDING_QUERY_PREFIX=query:
+EMBEDDING_PASSAGE_PREFIX=passage:
 
 # --- Non-validated (not in env.ts) ---
 NODE_TLS_REJECT_UNAUTHORIZED=
