--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -108,12 +108,12 @@
 		"lucide-react": "0.564.0",
 		"next": "16.1.6",
 		"next-themes": "0.4.6",
-		"@radix-ui/react-dialog": "^1.1.15",
-		"@radix-ui/react-dropdown-menu": "^2.1.16",
-		"@radix-ui/react-label": "^2.1.8",
-		"@radix-ui/react-popover": "^1.1.15",
-		"@radix-ui/react-slot": "^1.2.4",
-		"@radix-ui/react-tabs": "^1.1.13",
+		"@radix-ui/react-dialog": "1.1.15",
+		"@radix-ui/react-dropdown-menu": "2.1.16",
+		"@radix-ui/react-label": "2.1.8",
+		"@radix-ui/react-popover": "1.1.15",
+		"@radix-ui/react-slot": "1.2.4",
+		"@radix-ui/react-tabs": "1.1.13",
 		"react": "19.2.4",
 		"react-dom": "19.2.4",
 		"react-markdown": "10.1.0",
