--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
 		"memlab:article": "memlab run --scenario memlab/scenarios/article-list-navigation.ts",
 		"memlab:drawer": "memlab run --scenario memlab/scenarios/drawer-open-close.ts",
 		"memlab:all": "pnpm memlab:article && pnpm memlab:drawer",
+		"test:mutation": "stryker run",
+		"test:mutation:core": "stryker run stryker.config.json",
 		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
@@ -62,6 +64,9 @@
 		"@storybook/addon-themes": "10.2.11",
 		"@storybook/addon-vitest": "10.2.11",
 		"@storybook/nextjs-vite": "10.2.11",
+		"@stryker-mutator/core": "9.6.0",
+		"@stryker-mutator/typescript-checker": "9.6.0",
+		"@stryker-mutator/vitest-runner": "9.6.0",
 		"@tailwindcss/postcss": "4.2.1",
 		"@testing-library/jest-dom": "6.9.1",
 		"@testing-library/react": "16.3.2",
@@ -82,6 +87,7 @@
 		"jsdom": "28.1.0",
 		"knip": "5.85.0",
 		"license-checker-rseidelsohn": "4.4.2",
+		"memlab": "1.1.42",
 		"playwright": "1.58.2",
 		"storybook": "10.2.11",
 		"storybook-next-intl": "10.0.1",
@@ -90,7 +96,6 @@
 		"typedoc-plugin-mdn-links": "5.1.1",
 		"typescript": "5.9.3",
 		"typescript-eslint": "8.56.1",
-		"memlab": "1.1.42",
 		"vitest": "4.0.18"
 	}
 }
