--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"memlab:article": "memlab run --scenario memlab/scenarios/article-list-navigation.ts",
 		"memlab:drawer": "memlab run --scenario memlab/scenarios/drawer-open-close.ts",
 		"memlab:all": "pnpm memlab:article && pnpm memlab:drawer",
+		"test:chaos": "playwright test",
 		"test:mutation": "stryker run",
 		"test:mutation:core": "stryker run stryker.config.json",
 		"preinstall": "npx only-allow pnpm"
@@ -58,6 +59,7 @@
 		"@biomejs/biome": "2.4.4",
 		"@chromatic-com/storybook": "5.0.1",
 		"@eslint/config-inspector": "1.4.2",
+		"@playwright/test": "1.58.2",
 		"@storybook/addon-a11y": "10.2.11",
 		"@storybook/addon-docs": "10.2.11",
 		"@storybook/addon-mcp": "0.3.2",
